--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+.fotter{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 75px;
+    background-color: blue;
+    color: white;
+    text-align: center;
+}
